<resources>
    <!-- App name -->
    <string name="app_name">SkillLink</string>

    <!-- Text views for the main screen -->
    <string name="viewText1">SKILL</string> <!-- Title part 1 -->
    <string name="viewText2" translatable="false">LINK</string> <!-- Title part 2, not translatable -->
    <string name="viewText3">SkillLink M Commes Mobile App</string> <!-- Subtitle for the app -->
    <string name="viewText4">Crafting The Way To Your Business With Right Person</string> <!-- Tagline or description -->
    <string name="viewText5">It is a long established fact that a reader will be distracted by</string> <!-- Additional descriptive text -->

    <!-- Button texts -->
    <string name="button1">I Need to Someone Work</string> <!-- Button for clients looking for workers -->
    <string name="button2">I want to work</string> <!-- Button for workers seeking jobs -->

    <!-- Worker Sign Up and Sign In Text View -->
    <string name="viewText6">Worker Sign Up</string>
    <string name="viewText12">Worker Sign In</string>
    <string name="viewText7">First Name</string>
    <string name="viewText8">Last Name</string>
    <string name="viewText9">You Skill</string>
    <string name="viewText10">Mobile</string>
    <string name="viewText11">Password</string>
    <string name="button3">SIGN UP</string>
    <string name="button4">SIGN IN</string>
    <string name="viewText13">All Ready Have In Account</string>
    <string name="button5">Sign In</string>
    <string name="viewText14">Create a New Account Now</string>
    <string name="viewText15">Sign Up</string>


    <!-- Worker Profile Text View -->

    <string name="button6">Update</string>
    <string name="button7">Delete</string>


    <string name="button8">Bank Details </string>
    <string name="button9">Your Income</string>
    <string name="button10">Your payment</string>


    <!-- Worker Sign Up or Sign In Text View -->
    <string name="textView4">Customer Sign Up</string>
    <string name="textView5">Customer Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="help_support">Help  Support</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="map_api">AIzaSyCsSghUepCGue2LnEsFaUcSK0lOndz2Pdw</string>


    <string name="textView77">View Photo And Video</string>

    <string name="empty_state_text">You don\'t have any active chats yet.\nStart a conversation to connect!</string>

    <string name="chat_participants_title">Chat Participants (%1$d)</string>
    <string name="chat_participants_title_single">Chat Participant (1)</string>

</resources>