<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".auth.SplashActivity">

    <!-- "LINK" TextView -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="88dp"
        android:text="@string/viewText2"
        android:textColor="#6C0062"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_user_name"
        app:layout_constraintTop_toTopOf="@+id/view_user_name" />

    <!-- "SKILL" TextView -->
    <TextView
        android:id="@+id/view_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="8dp"
        android:text="@string/viewText1"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo/Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="390dp"
        android:layout_height="271dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/bg" />

    <!-- Tagline Text -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="289dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:text="@string/viewText4"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- Supporting Description -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="255dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/viewText5"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/customerSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <!-- "I Need Someone to Work" Button -->
    <Button
        android:id="@+id/customerSignIn"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/button1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/scrollbarSize"
        app:layout_constraintBottom_toTopOf="@+id/workerSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:text="@string/button1" />

    <!-- "I Want to Work" Button -->
    <Button
        android:id="@+id/workerSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="?android:attr/windowSplashScreenIconBackgroundColor"
        android:text="@string/button2"
        android:textColor="#6C0062"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="?android:attr/scrollbarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customerSignIn"
        app:strokeColor="@color/dark_magenta"
        app:strokeWidth="@dimen/cardview_default_radius" />

</androidx.constraintlayout.widget.ConstraintLayout>
